--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       
-      <img
+      <img src
     </div>
   </div>
 </body>
